update reviewer ae reply

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -385,3 +385,24 @@ squares (NIPALS) approach},
   year={2010}
 }
 
+@article{yuan2006model,
+  title={Model selection and estimation in regression with grouped variables},
+  author={Yuan, Ming and Lin, Yi},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={68},
+  number={1},
+  pages={49--67},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={267--288},
+  year={1996},
+  publisher={JSTOR}
+}
+
+
