--- a/jcgs_reviewer/reviewer_ae.tex
+++ b/jcgs_reviewer/reviewer_ae.tex
@@ -19,10 +19,11 @@
 \begin{document}
 	\maketitle
 		
-	We appreciate the helpful feedback from the reviewer. We have addressed your questions and comments. Below we give a point-by-point response to each of the questions posed by the reviewer:
+	We appreciate the helpful feedback from the reviewer. We have addressed your questions and comments. Below we give a point-by-point response to each of the questions:
 		
 	\begin{enumerate}
 		\point{The authors provided insufficient justification for using a large number of regularization parameters}
+
 		\reply  We have updated the introduction with more examples of problems with multiple regularization parameters. We inserted the following paragraph into Section 1:
 		
 		\begin{quote}
@@ -31,7 +32,7 @@
 		
 		\point{Some important details have been omitted from the empirical results. Full reproducibility is expected}
 		
-		\reply We apologize for omitting some simulation details. We have updated Section 3 to include more details on the empirical results. As requested by Reviewer 1, we have include a sentence on the number of simulation runs used in Section 3. In addition, we specify the parameters used in the gradient descent procedure in Section 2.5.
+		\reply We apologize for omitting some simulation details. We included the number of simulation runs used in Section 3. We also specify the parameters used in the gradient descent procedure in Section 2.5.
 		
 		\point{The empirical results cover a relatively small range of scenarios}
 		
@@ -42,9 +43,7 @@
 		
 		\point{The technical conditions seem quite restrictive from a practical point of view, and need further explanation/justification (or weakening)}
 		
-		\reply We apologize for the confusion regarding the technical conditions. Reviewer 2 was concerned that our paper would not be applicable to high-dimensional problems since we had previously specified that the objective function must be strictly convex. Reviewer 2 is correct that our paper does not actually need the strict convexity assumption. We have removed this from the text.
-		
-		The only conditions required are the three specified for Theorem 1. These assumptions cover many popular penalized regression settings.
+		\reply We apologize for the confusion regarding the technical conditions. Reviewer 2 was concerned that our paper would not be applicable to high-dimensional problems since we had previously specified that the objective function must be strictly convex. Reviewer 2 is correct that our paper does not actually need the strict convexity assumption. We have removed this from the text. Our results only depend on the three conditions in Theorem 1. These conditions include many popular penalized regression settings.
 		
 		\point{Make sure to provide all code for all experiments}
 		
@@ -55,17 +54,17 @@
 		\reply 	
 		We agree that the condition of interest is whether the loss is smooth almost everywhere with respect to the probability measure induced by the true sampling model. We suspect that the set of knots, the penalty parameters at which the validation loss is not differentiable, has measure zero under the true sampling model. Gradient descent is agnostic to whether or not the training criterion is smooth, so it seems unlikely that it will prefer knots.
 		
-		We also decided to investigate whether the minimizer of the validation loss tended to be at knots. We performed a simulation study with a penalized least squares problem with a lasso penalty. We tested all the knots along the lasso path as well as 2000 points in between each knot on the lasso path. The penalty parameter that minimized the validation loss was never located at a knot. This simple simulation study suggests that it is likely that in general, the penalty parameter that minimizes the validation loss is unlikely to be a knot. 
+		We also investigated whether the minimizer of the validation loss tended to be at knots. We performed a simulation study with a penalized least squares problem with a lasso penalty. The penalty parameter that minimized the validation loss was never located at a knot. This simple simulation study suggests that it is likely that in general, the penalty parameter that minimizes the validation loss is unlikely to be a knot. 
 		
-		\textbf{Simulation settings} We considered a simple case of the lasso with 50 covariates and calculated the distance between the lasso parameter that minimizes the validation loss to the closest knot along the lasso path. The response was generated data from the model
+		\textbf{Simulation settings} We considered a linear model with 50 covariates. The training and validation sets included 15 and 10 observations, respectively. The response was generated data from the model
 		$$
 		y = X\beta + \sigma\epsilon
 		$$
-		where $\beta = (1, 1, 1, 0, ..., 0)$. $\epsilon$ and $X$ were generated from a standard Gaussian distribution. We then found the lasso path for the training criterion
+		where $\beta = (1, 1, 1, 0, ..., 0)$. $\epsilon$ and $X$ were generated from a standard Gaussian distribution. We fit models that minimized the penalized training criterion
 		$$
 		\hat{\beta}(\lambda) = \arg\min_{\beta} \| y - X\beta \|_T^2 + \lambda \|\beta\|_1
 		$$
-		The training and validation sets included 15 and 10 observations, respectively. To find the lasso parameter that minimized the validation loss, we tested all the points along the lasso path as well as 2000 points in between each pair of consecutive knots.
+		To find the lasso parameter that minimized the validation loss, we tested all the points along the lasso path as well as 2000 points in between each pair of consecutive knots.
 %		As shown in the Figure \ref{fig:lasso}, the regularization parameter at each iteration is rarely exactly at the knots in the lasso path.
 		
 %		\begin{figure}
