--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -387,7 +387,7 @@ Let the criterion function be $L:\mathbb{R}^n \rightarrow \mathbb{R}$. Suppose t
 \subsection{Sensitivity to initialization points}
 Since the results of gradient descent and Nelder-Mead depend on their initialization points, we ran a simulation to see how increasing the number of initializations affects the two methods. We decided to run on a smaller version of the problem in  Section~\ref{sec:additive}. Here we have 60 training, 30 validation, and 30 test observations and $p = 15$ covariates. The response was generated from \eqref{eq:simulation_sparse_add}. We initialized $\boldsymbol{\lambda}$ by considering all possible combinations of $(\lambda_0, \lambda_1 \boldsymbol{1})$ where $\lambda_0, \lambda_1 \in \{10^i: i\in\{-2, -1, 0, 1\}\}$.
 
-In Figure \ref{fig:mult_starts} (left), we run the two algorithms on a random ordering of initialization points and plot the best validation error with $i$ initializations. The validation errors from both methods plateau quickly. Gradient descent manages to find penalty parameters with lower validation error. Figure \ref{fig:mult_starts} (right) presents a displays the distribution of validation errors resulting from the different initializations. On average, gradient descent finds penalty parameters with lower validation error compared to Nelder-Mead.
+In Figure \ref{fig:mult_starts} (left), we plot the validation error as the number of initializations increases. The validation errors from both methods plateau quickly. Gradient descent manages to find penalty parameters with lower validation error. Figure \ref{fig:mult_starts} (right) presents a displays the distribution of validation errors resulting from the different initializations. On average, gradient descent finds penalty parameters with lower validation error compared to Nelder-Mead.
 \begin{figure}
 	\label{fig:mult_starts}
 	\caption{Error of additive models tuned by gradient descent vs. Nelder-Mead. Left: Validation error of models after as the number of initialization points increases. Right: The distribution of validation errors.
